--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
+    "passkit-generator": "^3.1.10",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-device-detect": "^2.2.3",
