--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "jose": "^4.14.4",
     "next": "13.4.12",
     "passkit-generator": "^3.1.10",
     "postcss": "8.4.27",
@@ -23,6 +24,10 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.2"
   }
 }
