--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/elliptic": "^6.4.14",
     "@types/pako": "^2.0.0",
     "@types/qr-image": "^3.2.6",
-    "@types/uuid": "^9.0.2"
+    "@types/uuid": "^9.0.2",
+    "encoding": "^0.1.13"
   }
 }
