--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "google-auth-library": "^9.0.0",
     "jose": "^4.14.4",
     "js-sha256": "^0.9.0",
     "next": "13.4.12",
