--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@arx-research/libhalo": "^1.2.17",
+    "@ethereumjs/util": "^9.0.0",
     "@pcd/halo-nonce-pcd": "^0.2.1",
     "@pcd/passport-ui": "^0.6.1",
     "@pcd/pcd-types": "^0.6.3",
+    "@personaelabs/spartan-ecdsa": "^2.1.4",
     "@types/node": "20.4.5",
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
@@ -29,6 +31,7 @@
     "react": "18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
+    "readline": "^1.3.0",
     "styled-components": "^6.0.7",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
