--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@ PASSKIT_GENERATOR_PASSPHRASE=
 PASSKIT_SIGNERCERT_BASE64_PEM=
 PASSKIT_SIGNERKEY_BASE64_PEM=
 PASSKIT_WWDR_BASE64_PEM=
-
+DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
