--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@pcd/passport-ui": "^0.6.1",
     "@pcd/pcd-types": "^0.6.3",
     "@personaelabs/spartan-ecdsa": "^2.1.4",
+    "@prisma/client": "^5.3.0",
     "@types/node": "20.4.5",
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
@@ -43,6 +44,7 @@
     "@types/qr-image": "^3.2.6",
     "@types/uuid": "^9.0.2",
     "elliptic": "^6.5.4",
-    "encoding": "^0.1.13"
+    "encoding": "^0.1.13",
+    "prisma": "^5.3.0"
   }
 }
