--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "bufferutil": "^4.0.7",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "google-auth-library": "^9.0.0",
@@ -36,6 +37,7 @@
     "styled-components": "^6.0.7",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
+    "utf-8-validate": "^6.0.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
