--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ PASSKIT_SIGNERCERT_BASE64_PEM=
 PASSKIT_SIGNERKEY_BASE64_PEM=
 PASSKIT_WWDR_BASE64_PEM=
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+TELEGRAM_BOT_TOKEN="1234567890:ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
