--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "readline": "^1.3.0",
     "styled-components": "^6.0.7",
     "tailwindcss": "3.3.3",
+    "telegraf": "^4.13.1",
     "typescript": "5.1.6",
     "utf-8-validate": "^6.0.3",
     "uuid": "^9.0.0"
