--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bufferutil": "^4.0.7",
+    "detectincognitojs": "^1.3.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "google-auth-library": "^9.0.0",
