--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
-    "axios": "^1.4.0",
     "bufferutil": "^4.0.7",
+    "class-variance-authority": "^0.7.0",
     "detectincognitojs": "^1.3.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
@@ -35,8 +35,10 @@
     "react": "18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
     "readline": "^1.3.0",
     "styled-components": "^6.0.7",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "telegraf": "^4.13.1",
     "typescript": "5.1.6",
