--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-query": "^3.39.3",
     "readline": "^1.3.0",
     "styled-components": "^6.0.8",
