--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
+    "add": "^2.0.6",
     "autoprefixer": "10.4.14",
     "bufferutil": "^4.0.7",
     "class-variance-authority": "^0.7.0",
@@ -37,6 +38,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
     "readline": "^1.3.0",
     "styled-components": "^6.0.8",
@@ -45,7 +47,8 @@
     "telegraf": "^4.13.1",
     "typescript": "5.1.6",
     "utf-8-validate": "^6.0.3",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/elliptic": "^6.4.14",
